2014-12-27  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	python.el: Cleanup temp files even with eval errors.

	* progmodes/python.el (python-shell-send-file): Make file-name
	mandatory.  Fix temp file removal in the majority of cases.

2014-12-27  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	python.el: Handle file encoding for shell.

	* progmodes/python.el (python-rx-constituents): Add coding-cookie.
	(python-shell--save-temp-file): Write file with proper encoding.
	(python-shell-buffer-substring): Add coding cookie for detected
	encoding to generated content.  Fix blank lines when removing
	if-name-main block.
	(python-shell-send-file): Handle file encoding.
	(python-info-encoding-from-cookie)
	(python-info-encoding): New functions.

2014-12-24  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-sh.el (tramp-do-copy-or-rename-file-out-of-band):
	Use `tramp-rsh-end-of-line', it ought to be more robust.

2014-12-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/js.el (js-syntax-propertize): "return" can't be divided
	(bug#19397).

2014-12-23  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-read-passwd): Ignore errors from `auth-source-*'.

	* net/tramp-sh.el (tramp-do-copy-or-rename-file-out-of-band): Use "\n"
	as end-of-line delimeter for passwords, when running on MS Windows.

2014-12-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/sh-script.el (sh-set-shell): Don't change the global value
	of indent-line-function (bug#19433).

2014-12-23  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	Fix line numbers on Python shell.
	* progmodes/python.el (python-shell--save-temp-file): Do not
	append coding cookie.
	(python-shell-send-string): Generalize for
	python-shell-send-region.
	(python--use-fake-loc): Delete var.
	(python-shell-buffer-substring): Cleanup fake-loc logic.
	(python-shell-send-region): Remove fake-loc logic, simplify.

2014-12-22  Fabián Ezequiel Gallina  <fgallina@gnu.org>
